# IISERM

IDC101/: 01-21-22-Lab-2-MS21113.ipynb  01-28-22-Lab-3-MS21113.ipynb  02-04-22-Lab-4-MS21113.ipynb  02-11-22-Lab-5-MS21113.ipynb  02-25-22-Lab-6-MS21113.ipynb  03-04-22-Lab-7-MS21113.ipynb  03-11-22-Lab-8-MS21113.ipynb  03-25-22-Lab-9-MS21113.ipynb  04-01-22-Lab-10-MS21113.ipynb  README.md
IDC306/: .gitignore  README.md  flake.nix  pyproject.toml
IDC306/assignments/: fasta_file2.txt  ptenSequence.gb  test.py
IDC306/assignments/1/: 1.md  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  submission.md  submission.typ
IDC306/assignments/10/: 10.md  10.py  ms21113_submission.ipynb
IDC306/assignments/11/: 11.md  11.py  MS21113_submission.ipynb
IDC306/assignments/12/: 12.md  12.py  MS21113_submission.ipynb
IDC306/assignments/2/: 2.md  21.sh  22.sh  fasta_file_complement.txt  submission.typ
IDC306/assignments/3/: 3.md  3.py  ms21113_submission.ipynb
IDC306/assignments/4/: 4.md  4.py  ms21113_submission.ipynb
IDC306/assignments/5/: 5.md  5.py  ms21113_submission.ipynb
IDC306/assignments/6/: 6.md  6.py  ms21113_submission.ipynb
IDC306/assignments/7/: 7.md  7.py  ms21113_submission.ipynb
IDC306/assignments/8/: 8.md  8.py  ms21113_submission.ipynb
IDC306/assignments/9/: 9.md  9.py  ms21113_submission.ipynb
IDC306/assignments/project/: MS21113_submission.ipynb  main.py
IDC306/resources/: 01_04_2025.ipynb  CW_17_03_25.ipynb  LearningDecorators.ipynb  PythonClass.ipynb  PythonClass2.ipynb
IDC402/: Manifest.toml  Project.toml  README.md  flake.nix  (+1 more)
(+138 files in other folders)
