[project]
name = "IDC306"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "marimo>=0.11.6",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "notebook>=7.3.2",
    "numpy>=2.2.4",
    "pip>=25.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
